fix newsletter form on firefox #202

--- a/drupal/sites/all/themes/antistatique/assets/sass/molecules/_input-groups.scss
+++ b/drupal/sites/all/themes/antistatique/assets/sass/molecules/_input-groups.scss
@@ -9,3 +9,22 @@
   height: 44px;
   border-radius: 2px;
 }
+
+.form-mobile {
+  @media only screen and (max-width: $screen-xs-max) {
+    .input-group {
+      display: block;
+
+      .form-control {
+        display: inline-block;
+        float: none;
+      }
+    }
+    .input-group-btn {
+      > .btn {
+        margin-left: 0;
+        margin-top: 4px;
+      }
+    }
+  }
+}
